[package]
name = "cryptopals"
version = "0.1.0"
edition = "2021"
default-run = "cryptopals"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "ctr-cracker"
path = "src/bin/ctr_cracker/ctr_cracker.rs"

[[bin]]
name = "simple-server"
path = "src/bin/simple_server/simple_server.rs"

[[bin]]
name = "cryptopals"
path = "src/main.rs"

[dependencies]
openssl = "0.10.38"
rand = "0.8.3"
crossterm = { version = "0.23", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
tui = { version = "0.18", default-features = false, features = ['crossterm', 'serde'] }
sha1_smol = "1.0.0"
digest = "0.10.3"
actix-web = "4.1.0"
reqwest = { version = "0.11.11", features = ["blocking", "cookies"] }
sha2 = "0.10.5"
num = "0.4.0"
actix-session = { version = "0.7.1", features = ["cookie-session"] }
